Added descriptions to modules
Added descriptions and organized the code of each module

Fixing minor bugs during testing

--- a/RISCV.sim/sim_1/behav/xsim/xsim.dir/RICV_tb_behav/xsimSettings.ini
+++ b/RISCV.sim/sim_1/behav/xsim/xsim.dir/RICV_tb_behav/xsimSettings.ini
@@ -26,10 +26,10 @@ INTERNAL_PROTOINST_FILTER=true
 CONSTANT_PROTOINST_FILTER=true
 VARIABLE_PROTOINST_FILTER=true
 SCOPE_NAME_COLUMN_WIDTH=209
-SCOPE_DESIGN_UNIT_COLUMN_WIDTH=75
-SCOPE_BLOCK_TYPE_COLUMN_WIDTH=129
+SCOPE_DESIGN_UNIT_COLUMN_WIDTH=129
+SCOPE_BLOCK_TYPE_COLUMN_WIDTH=75
 OBJECT_NAME_COLUMN_WIDTH=198
-OBJECT_VALUE_COLUMN_WIDTH=130
+OBJECT_VALUE_COLUMN_WIDTH=343
 OBJECT_DATA_TYPE_COLUMN_WIDTH=75
 PROCESS_NAME_COLUMN_WIDTH=75
 PROCESS_TYPE_COLUMN_WIDTH=75
@@ -37,7 +37,7 @@ FRAME_INDEX_COLUMN_WIDTH=75
 FRAME_NAME_COLUMN_WIDTH=75
 FRAME_FILE_NAME_COLUMN_WIDTH=75
 FRAME_LINE_NUM_COLUMN_WIDTH=198
-LOCAL_NAME_COLUMN_WIDTH=130
+LOCAL_NAME_COLUMN_WIDTH=343
 LOCAL_VALUE_COLUMN_WIDTH=75
 LOCAL_DATA_TYPE_COLUMN_WIDTH=0
 PROTO_NAME_COLUMN_WIDTH=0
@@ -48,3 +48,6 @@ INOUT_LOCAL_FILTER=1
 INTERNAL_LOCAL_FILTER=1
 CONSTANT_LOCAL_FILTER=1
 VARIABLE_LOCAL_FILTER=1
+[Object Radixes]
+RADIX_0=hex /RICV_tb/dut/data_memory/data_ram[2];
+RADIX_1=hex /RICV_tb/dut/reg_memory/reg_ram[7];
